# Server/src/index.ts
@@ -24,6 +24,7 @@ import swaggerUi from 'swagger-ui-express'
 import swaggerJsdoc from 'swagger-jsdoc'
 import helmet from 'helmet'
 import { rateLimit } from 'express-rate-limit'
+import questionsRouter_v2 from './routes/questions_v2.routes'
 
 // const file = fs.readFileSync(path.resolve('toeictesting247-swagger.yaml'), 'utf8')
 // const swaggerDocument = YAML.parse(file)
@@ -151,6 +152,7 @@ app.use('/static', staticRouter)
 app.use('/courses', coursesRouter)
 app.use('/tests', testsRouter)
 app.use('/questions', questionsRouter)
+app.use('/questions-v2', questionsRouter_v2)
 app.use('/notifications', notificationsRouter)
 app.use('/documents', documentsRouter)
 app.use('/scorecards', scoreCardsRouter)
