# Server/toeictesting247-swagger.yaml
@@ -59,6 +59,8 @@ tags:
     description: Các API liên quan đến bài kiểm tra (thêm, cập nhật, ...)
   - name: questions
     description: Các API liên quan đến câu hỏi (thêm, cập nhật, ...)
+  - name: questions_v2
+    description: Các API liên quan đến câu hỏi (thêm, cập nhật, ...)
   - name: scorecards
     description: Các API liên quan đến bảng điểm (thêm, cập nhật, ...)
   - name: notifications
@@ -1385,6 +1387,185 @@ paths:
                     type: string
                     example: Question deleted successfully
 
+  #* API cho câu hỏi ver 2
+  /questions-v2/:
+    post:
+      tags:
+        - questions_v2
+      summary: Tạo câu hỏi
+      description: Tạo câu hỏi
+      operationId: createQuestion
+      security:
+        - BearerAuth: []
+      requestBody:
+        description: Thông tin tạo câu hỏi
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/QuestionRequestBody_V2'
+        required: true
+      responses:
+        default:
+          description: Tạo câu hỏi thành công
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: Create question success
+                  result:
+                    $ref: '#/components/schemas/QuestionRequestBody_V2'
+
+  /questions-v2/{question_id}:
+    get:
+      tags:
+        - questions_v2
+      summary: Lấy thông tin câu hỏi theo id
+      description: Lấy thông tin câu hỏi theo id
+      operationId: getQuestionById
+      security:
+        - BearerAuth: []
+      parameters:
+        - name: question_id
+          in: path
+          description: id của câu hỏi
+          required: true
+          schema:
+            type: string
+            format: MongoId
+            example: '66547f6f171f8b1b9f91c7f2'
+      responses:
+        default:
+          description: Lấy thông tin câu hỏi theo id thành công
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: Get question detail successfully
+                  result:
+                    $ref: '#/components/schemas/QuestionResponseBody_v2'
+
+  /questions-v2/list:
+    get:
+      tags:
+        - questions_v2
+      summary: Lấy danh sách câu hỏi
+      description: Lấy danh sách toàn bộ câu hỏi
+      operationId: getQuestions
+      security:
+        - BearerAuth: []
+      parameters:
+        - name: page
+          in: query
+          description: Số trang
+          required: true
+          schema:
+            type: integer
+            example: 1
+        - name: limit
+          in: query
+          description: Số lượng câu hỏi trên mỗi trang
+          required: true
+          schema:
+            type: integer
+            example: 10
+      responses:
+        default:
+          description: Lấy danh sách câu hỏi thành công
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: Get list question successfully
+                  result:
+                    type: object
+                    properties:
+                      questions:
+                        type: array
+                        items:
+                          $ref: '#/components/schemas/QuestionResponseBody_v2'
+                      limit:
+                        type: integer
+                        example: 10
+                      page:
+                        type: integer
+                        example: 1
+                      total_page:
+                        type: integer
+                        example: 1
+
+  /questions-v2/update:
+    patch:
+      tags:
+        - questions_v2
+      summary: Cập nhật câu hỏi
+      description: Cập nhật câu hỏi
+      operationId: updateQuestion
+      security:
+        - BearerAuth: []
+      requestBody:
+        description: Thông tin cập nhật câu hỏi
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/UpdateQuestionRequestBody_v2'
+        required: true
+      responses:
+        default:
+          description: Cập nhật câu hỏi thành công
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: Update question success
+                  result:
+                    $ref: '#/components/schemas/QuestionResponseBody_v2'
+
+  /questions-v2/delete:
+    delete:
+      tags:
+        - questions_v2
+      summary: Xóa câu hỏi
+      description: Xóa câu hỏi
+      operationId: deleteQuestion
+      security:
+        - BearerAuth: []
+      requestBody:
+        description: Thông tin xóa câu hỏi
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                question_id:
+                  type: string
+                  format: MongoId
+                  description: id của câu hỏi
+                  example: '66547f6f171f8b1b9f91c7f2'
+        required: true
+      responses:
+        default:
+          description: Xóa câu hỏi thành công
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: Question deleted successfully
+
   #* API cho bài làm
   /scorecards/:
     post:
@@ -2296,6 +2477,142 @@ components:
         content:
           type: string
           example: 'My parents normally __________ breakfast at 7:00 a.m.'
+        answers:
+          $ref: '#/components/schemas/ListAnswers'
+        correct_at:
+          $ref: '#/components/schemas/Answer'
+        score:
+          type: integer
+          example: 1
+
+    QuestionType:
+      type: number
+      enum: [SimpleQuestion, QuoteQuestion, DoubleQuestion, TripleQuestion, QuadrupleQuestion, QuintupleQuestion]
+      example: 0
+
+    QuestionRequestBody_V2:
+      type: object
+      properties:
+        type:
+          $ref: '#/components/schemas/QuestionType'
+        type_content:
+          type: integer
+          example: 1
+        num_part:
+          type: integer
+          example: 1
+        description:
+          type: string
+          example: '(D) A museum guide'
+        content:
+          type: string
+          example: 'Because of her hearing disability, Ms. Frasier will be _____ by a sign language expert so she can participate in the meeting.'
+        audio_content:
+          type: string
+          example: 'https://toeictesting247.com/audio/audio1.mp3'
+        image_content:
+          type: string
+          example: 'https://toeictesting247.com/image/image1.png'
+        answers:
+          $ref: '#/components/schemas/ListAnswers'
+        correct_at:
+          $ref: '#/components/schemas/Answer'
+        parent_id:
+          type: string
+          format: MongoId
+          example: '65ffb1aefef511c9911f8980'
+        score:
+          type: integer
+          example: 1
+      required:
+        - type
+        - type_content
+        - num_part
+        - description
+        - content
+        - answers
+        - correct_at
+        - parent_id
+        - score
+
+    QuestionResponseBody_v2:
+      type: object
+      properties:
+        _id:
+          type: string
+          format: MongoId
+          example: '6654bd4939911624e709ac35'
+        type:
+          $ref: '#/components/schemas/QuestionType'
+        type_content:
+          type: integer
+          example: 1
+        num_part:
+          type: integer
+          example: 1
+        description:
+          type: string
+          example: '(D) A museum guide'
+        content:
+          type: string
+          example: 'Because of her hearing disability, Ms. Frasier will be _____ by a sign language expert so she can participate in the meeting.'
+        audio_content:
+          type: string
+          example: 'https://toeictesting247.com/audio/audio1.mp3'
+        image_content:
+          type: string
+          example: 'https://toeictesting247.com/image/image1.png'
+        answers:
+          $ref: '#/components/schemas/ListAnswers'
+        correct_at:
+          $ref: '#/components/schemas/Answer'
+        parent_id:
+          type: string
+          format: MongoId
+          example: '65ffb1aefef511c9911f8980'
+        score:
+          type: integer
+          example: 1
+        created_at:
+          type: string
+          format: date-time
+          example: '2024-05-27T17:05:13.697Z'
+        updated_at:
+          type: string
+          format: date-time
+          example: '2024-05-27T17:05:13.697Z'
+      required:
+        - type
+        - type_content
+        - num_part
+        - description
+        - content
+        - answers
+        - correct_at
+        - parent_id
+        - score
+
+    UpdateQuestionRequestBody_v2:
+      type: object
+      required:
+        - question_id
+      properties:
+        question_id:
+          type: string
+          format: MongoId
+          example: '6654bd4939911624e709ac35'
+        description:
+          type: string
+          example: '(D) A museum guide'
+        content:
+          type: string
+          example: 'Because of her hearing disability, Ms. Frasier will be _____ by a sign language expert so she can participate in the meeting.'
+        audio_content:
+          type: string
+          example: 'https://toeictesting247.com/audio/audio1.mp3'
+        image_content:
+          type: string
+          example: 'https://toeictesting247.com/image/image1.png'
         answers:
           $ref: '#/components/schemas/ListAnswers'
         correct_at:
